@@ -20,15 +20,15 @@
 
 #include "melee.h"
 
-#include "controls.h"
-#include "gameopt.h"
-#include "gamestr.h"
-#include "globdata.h"
-#include "master.h"
-#include "save.h"
-#include "setup.h"
-#include "sounds.h"
-#include "options.h"
+#include "../controls.h"
+#include "../gameopt.h"
+#include "../gamestr.h"
+#include "../globdata.h"
+#include "../master.h"
+#include "../save.h"
+#include "../setup.h"
+#include "../sounds.h"
+#include "../../options.h"
 #include "libs/log.h"
 #include "libs/memlib.h"
 
