@@ -18,35 +18,35 @@
 
 #include "melee.h"
 
-#include "build.h"
-#include "status.h"
-#include "colors.h"
-#include "comm.h"
+#include "../build.h"
+#include "../status.h"
+#include "../colors.h"
+#include "../comm.h"
 		// for getLineWithinWidth
-#include "cons_res.h"
-#include "controls.h"
+#include "../cons_res.h"
+#include "../controls.h"
 #include "libs/file.h"
-#include "fmv.h"
-#include "gamestr.h"
-#include "globdata.h"
-#include "intel.h"
-#include "master.h"
-#include "nameref.h"
+#include "../fmv.h"
+#include "../gamestr.h"
+#include "../globdata.h"
+#include "../intel.h"
+#include "../master.h"
+#include "../nameref.h"
 #ifdef NETPLAY
-#	include "netplay/netconnection.h"
-#	include "netplay/netmelee.h"
-#	include "netplay/notify.h"
+#	include "../netplay/netconnection.h"
+#	include "../netplay/netmelee.h"
+#	include "../netplay/notify.h"
 #	include "libs/graphics/widgets.h"
-#	include "cnctdlg.h"
+#	include "../cnctdlg.h"
 #endif
-#include "options.h"
-#include "races.h"
-#include "resinst.h"
-#include "settings.h"
-#include "setup.h"
-#include "sounds.h"
-#include "util.h"
-#include "planets/planets.h"
+#include "../../options.h"
+#include "../races.h"
+#include "../resinst.h"
+#include "../settings.h"
+#include "../setup.h"
+#include "../sounds.h"
+#include "../util.h"
+#include "../planets/planets.h"
 		// for NUMBER_OF_PLANET_TYPES
 #include "libs/graphics/drawable.h"
 #include "libs/gfxlib.h"
